--- a/Test.ipynb
+++ b/Test.ipynb
@@ -54,11 +54,11 @@
       "metadata": {
         "id": "A3-S9t2ffHiy",
         "colab_type": "code",
-        "outputId": "7e7b54c4-7718-428e-8757-779d992e90df",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
+          "height": 145
+        },
+        "outputId": "ae7fb26e-8957-44e4-95ff-339cf12c9a2c"
       },
       "source": [
         "!git clone https://github.com/annvix/Accents_LSTM-.git"
@@ -69,12 +69,12 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'Accents_LSTM-'...\n",
-            "remote: Enumerating objects: 20, done.\u001b[K\n",
-            "remote: Counting objects:   5% (1/20)\u001b[K\rremote: Counting objects:  10% (2/20)\u001b[K\rremote: Counting objects:  15% (3/20)\u001b[K\rremote: Counting objects:  20% (4/20)\u001b[K\rremote: Counting objects:  25% (5/20)\u001b[K\rremote: Counting objects:  30% (6/20)\u001b[K\rremote: Counting objects:  35% (7/20)\u001b[K\rremote: Counting objects:  40% (8/20)\u001b[K\rremote: Counting objects:  45% (9/20)\u001b[K\rremote: Counting objects:  50% (10/20)\u001b[K\rremote: Counting objects:  55% (11/20)\u001b[K\rremote: Counting objects:  60% (12/20)\u001b[K\rremote: Counting objects:  65% (13/20)\u001b[K\rremote: Counting objects:  70% (14/20)\u001b[K\rremote: Counting objects:  75% (15/20)\u001b[K\rremote: Counting objects:  80% (16/20)\u001b[K\rremote: Counting objects:  85% (17/20)\u001b[K\rremote: Counting objects:  90% (18/20)\u001b[K\rremote: Counting objects:  95% (19/20)\u001b[K\rremote: Counting objects: 100% (20/20)\u001b[K\rremote: Counting objects: 100% (20/20), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
-            "remote: Total 115 (delta 7), reused 0 (delta 0), pack-reused 95\u001b[K\n",
-            "Receiving objects: 100% (115/115), 21.41 MiB | 16.93 MiB/s, done.\n",
-            "Resolving deltas: 100% (56/56), done.\n"
+            "remote: Enumerating objects: 37, done.\u001b[K\n",
+            "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (37/37), done.\u001b[K\n",
+            "remote: Total 132 (delta 13), reused 0 (delta 0), pack-reused 95\u001b[K\n",
+            "Receiving objects: 100% (132/132), 22.83 MiB | 16.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (62/62), done.\n"
           ],
           "name": "stdout"
         }
@@ -93,12 +93,12 @@
         "import random\n",
         "import numpy as np\n",
         "\n",
-        "model = load_model('Accents_LSTM-/Unet_model.h5')\n",
+        "model = load_model('Accents_LSTM-/resUnet_model.h5')\n",
         "model.compile(optimizer='adam',\n",
         "                  loss=tf.keras.losses.CategoricalCrossentropy(from_logits=False, name='categorical_crossentropy'),\n",
         "                  metrics=['accuracy'])"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "max_len = 29\n",
         "number_of_classes = max_len + 1"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
         "        if v == value:\n",
         "            return k"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
         "#             break\n",
         "#     return False"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
         "def text_without_punct(text):\n",
         "    return ''.join([i for i in text if i not in punctuation])"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -236,11 +236,11 @@
       "metadata": {
         "id": "AGOX4hMsfHjE",
         "colab_type": "code",
-        "outputId": "ff20bec8-d161-4155-9f74-a73ce125ef5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+          "height": 54
+        },
+        "outputId": "e74b5509-eb41-4120-dd3f-cf57d0e1f3c5"
       },
       "source": [
         "word = 'тараканище'\n",
@@ -251,23 +251,23 @@
         "for i in range(len(word)):\n",
         "  word_int[i]= alphabet[word[i]]\n",
         "\n",
-        "word_int = np.reshape(word_int, (1, word_int.shape[0], 1))    \n",
+        "word_int = np.reshape(word_int, (1, 1, word_int.shape[0]))    \n",
         "acc_pred = model.predict(word_int)\n",
         "\n",
         "for i in range(1):\n",
         "  slovo = ''\n",
-        "  for j in range(len(word_int[i])):\n",
-        "      if word_int[i][j] != 0:\n",
-        "          slovo = slovo + get_key(alphabet, word_int[i][j])\n",
+        "  for j in range(len(word_int[i][0])):\n",
+        "      if word_int[i][0][j] != 0:\n",
+        "          slovo = slovo + get_key(alphabet, word_int[i][0][j])\n",
         "      else:\n",
         "          break\n",
-        "  nn_sample = slovo[:acc_pred[i].argmax()+1] + \"'\" + slovo[acc_pred[i].argmax()+1:]\n",
+        "  nn_sample = slovo[:acc_pred[i][0].argmax()+1] + \"'\" + slovo[acc_pred[i][0].argmax()+1:]\n",
         "  print('слово    : ' , slovo)\n",
         "  print('Результат: ' , nn_sample)\n",
         "#else:\n",
         "#print('В этом слове нет ударения:', word)"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,10 +303,10 @@
         "    no_punct_text = text_without_punct(str)\n",
         "    str_ls = ''.join(no_punct_text).lower()\n",
         "    str_ls = str_ls.split()\n",
-        "    str_sent_int = np.zeros((len(str_ls), number_of_classes, 1), dtype=int)\n",
+        "    str_sent_int = np.zeros((len(str_ls), 1, number_of_classes), dtype=int)\n",
         "    for i in range(len(str_ls)):\n",
-        "        for j in range(len(str_ls[i])):\n",
-        "            str_sent_int[i][j]= alphabet[str_ls[i][j]]\n",
+        "        for j in range(len(str_ls[i][0])):\n",
+        "            str_sent_int[i][0][j]= alphabet[str_ls[i][0][j]]\n",
         "    \n",
         "    # предсказывание ударения\n",
         "    acc_pred = model.predict(str_sent_int)\n",
@@ -324,7 +324,7 @@
         "    print (final)\n",
         "    return final"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -342,22 +342,22 @@
       "metadata": {
         "id": "Olnj1GvjfHjK",
         "colab_type": "code",
-        "outputId": "139a2236-53c2-4a94-ab08-0eb8c0ed8f14",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 35
+        },
+        "outputId": "b0c11c67-efef-4f2d-f794-a69dff813bec"
       },
       "source": [
         "test = 'В России зимой бывает много снега.'\n",
         "test_acc = acc_in_sent(test)"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "В' Ро'ссии зи'мой бы'вает мно'го сне'га. \n"
+            "В' Ро'ссии зи'мой бы'вает мн'ого сн'ега. \n"
           ],
           "name": "stdout"
         }
@@ -384,7 +384,7 @@
         "with open('Accents_LSTM-/sentences.txt', 'r') as f:\n",
         "    sent_ = f.readlines()"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
         "for i in range(10):\n",
         "    test_sent.append(sent_split[i])"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -414,41 +414,41 @@
       "metadata": {
         "id": "z4wL_7m8fHjR",
         "colab_type": "code",
-        "outputId": "03b9f4d2-16d5-4d87-fb27-e9b92a1b762f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 357
-        }
+          "height": 381
+        },
+        "outputId": "94d42a40-2797-4cf5-cddf-9360bc9dbe13"
       },
       "source": [
         "for k in range(len(test_sent)):\n",
         "    acc_in_sent(test_sent[k])\n",
         "    print()"
       ],
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Мы' карабка'лись че'рез руи'ны. \n",
+            "Ст'арик вс'кочил с' ку'шетки. \n",
             "\n",
-            "Он'и не' шли' по' наши'м земля'м. \n",
+            "Он' сп'рыгнул на' по'л. \n",
             "\n",
-            "Я' раздумыва'л насче'т па'пы. \n",
+            "Я' бр'осилась в' ко'ридор. \n",
             "\n",
-            "Мэ'ри неохотн'о задержа'лась на' поро'ге. \n",
+            "Мы' за'шли в' до'м. \n",
             "\n",
-            "Он' не'сся к' ближа'йшей лестни'це. \n",
+            "Гр'ег вы'глянул в' ок'но. \n",
             "\n",
-            "Он' подробн'о отве'тил на' мо'й во'прос. \n",
+            "Мы' по'скачем в' сн'егу. \n",
             "\n",
-            "Он' раздава'лся из' ва'нной. \n",
+            "Мы' вв'алились в' ка'кой-то по'дъезд. \n",
             "\n",
-            "Я' ед'ва не' пада'л из' се'дла. \n",
+            "Он' пр'актически си'дел на' не'гре. \n",
             "\n",
-            "Купе'р посмотре'л вс'лед уходя'щему полице'йскому. \n",
+            "Я' по'смотрел на' уг'ольно-черную ко'шку. \n",
             "\n",
-            "Мы' прорва'лись че'рез перебо'рку. \n",
+            "Я' вы'шла из' но'мера. \n",
             "\n"
           ],
           "name": "stdout"
@@ -465,7 +465,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
