--- a/Test.ipynb
+++ b/Test.ipynb
@@ -56,9 +56,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 34
         },
-        "outputId": "ae7fb26e-8957-44e4-95ff-339cf12c9a2c"
+        "outputId": "c4619aec-c813-4b65-c495-91115e7188cd"
       },
       "source": [
         "!git clone https://github.com/annvix/Accents_LSTM-.git"
@@ -68,13 +68,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'Accents_LSTM-'...\n",
-            "remote: Enumerating objects: 37, done.\u001b[K\n",
-            "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (37/37), done.\u001b[K\n",
-            "remote: Total 132 (delta 13), reused 0 (delta 0), pack-reused 95\u001b[K\n",
-            "Receiving objects: 100% (132/132), 22.83 MiB | 16.19 MiB/s, done.\n",
-            "Resolving deltas: 100% (62/62), done.\n"
+            "fatal: destination path 'Accents_LSTM-' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -124,9 +118,8 @@
         "             'с' : 19, 'т' : 20, 'у' : 21, 'ф' : 22, 'х' : 23, 'ц' : 24, 'ч' : 25, 'ш' : 26, 'щ' : 27,\n",
         "             'ъ' : 28, 'ы' : 29, 'ь' : 30, 'э' : 31, 'ю' : 32, 'я' : 33}\n",
         "\n",
-        "vovels = ['а', 'о', 'э', 'и', 'у', 'ы', 'е', 'ё', 'ю', 'я']\n",
         "max_len = 29\n",
-        "number_of_classes = max_len + 1"
+        "number_of_classes = 32"
       ],
       "execution_count": 3,
       "outputs": []
@@ -155,34 +148,6 @@
         "            return k"
       ],
       "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Rl70OEL35CeJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "Метод для проверки, есть ли гласные в слове -> есть ли ударение"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1TquoE03w_30",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# def is_acc (w):\n",
-        "#     for i in w:\n",
-        "#         if i in vovels: \n",
-        "#             return True\n",
-        "#             break\n",
-        "#     return False"
-      ],
-      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,36 +203,37 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 50
         },
-        "outputId": "e74b5509-eb41-4120-dd3f-cf57d0e1f3c5"
+        "outputId": "5bf6b424-20f2-4d98-ba4c-3808cc0a9ab3"
       },
       "source": [
         "word = 'тараканище'\n",
-        "#word = 'хм'\n",
-        "#if is_acc(word):\n",
+        "#word = 'в'\n",
+        "\n",
         "word_int = np.zeros((number_of_classes), dtype=int)\n",
         "\n",
         "for i in range(len(word)):\n",
         "  word_int[i]= alphabet[word[i]]\n",
         "\n",
-        "word_int = np.reshape(word_int, (1, 1, word_int.shape[0]))    \n",
+        "word_int = np.reshape(word_int, (1, word_int.shape[0]))    \n",
         "acc_pred = model.predict(word_int)\n",
         "\n",
         "for i in range(1):\n",
         "  slovo = ''\n",
-        "  for j in range(len(word_int[i][0])):\n",
-        "      if word_int[i][0][j] != 0:\n",
-        "          slovo = slovo + get_key(alphabet, word_int[i][0][j])\n",
+        "  for j in range(len(word_int[i])):\n",
+        "      if word_int[i][j] != 0:\n",
+        "          slovo = slovo + get_key(alphabet, word_int[i][j])\n",
         "      else:\n",
         "          break\n",
-        "  nn_sample = slovo[:acc_pred[i][0].argmax()+1] + \"'\" + slovo[acc_pred[i][0].argmax()+1:]\n",
+        "  if (acc_pred[i].argmax() == (number_of_classes - 1)):\n",
+        "    nn_sample = slovo\n",
+        "  else:\n",
+        "    nn_sample = slovo[:acc_pred[i].argmax() + 1] + \"'\" + slovo[acc_pred[i].argmax() + 1 : ]\n",
         "  print('слово    : ' , slovo)\n",
-        "  print('Результат: ' , nn_sample)\n",
-        "#else:\n",
-        "#print('В этом слове нет ударения:', word)"
+        "  print('Результат: ' , nn_sample)"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,10 +269,10 @@
         "    no_punct_text = text_without_punct(str)\n",
         "    str_ls = ''.join(no_punct_text).lower()\n",
         "    str_ls = str_ls.split()\n",
-        "    str_sent_int = np.zeros((len(str_ls), 1, number_of_classes), dtype=int)\n",
+        "    str_sent_int = np.zeros((len(str_ls), number_of_classes), dtype=int)\n",
         "    for i in range(len(str_ls)):\n",
-        "        for j in range(len(str_ls[i][0])):\n",
-        "            str_sent_int[i][0][j]= alphabet[str_ls[i][0][j]]\n",
+        "        for j in range(len(str_ls[i])):\n",
+        "            str_sent_int[i][j]= alphabet[str_ls[i][j]]\n",
         "    \n",
         "    # предсказывание ударения\n",
         "    acc_pred = model.predict(str_sent_int)\n",
@@ -315,16 +281,15 @@
         "    final_sent_ = str.split()\n",
         "    final = ''\n",
         "    for i in range(len(str_ls)):\n",
-        "      #if is_acc(str_ls[i]):\n",
-        "      #  final = final + final_sent_[i][:acc_pred[i].argmax()+1] + \"'\" + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
-        "      #else:\n",
-        "      #  final = final + final_sent_[i][:acc_pred[i].argmax()+1] + '' + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
-        "      final = final + final_sent_[i][:acc_pred[i].argmax()+1] + \"'\" + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
+        "      if (acc_pred[i].argmax() == (number_of_classes - 1)):\n",
+        "        final = final + final_sent_[i] + ' '\n",
+        "      else:\n",
+        "        final = final + final_sent_[i][:acc_pred[i].argmax()+1] + \"'\" + final_sent_[i][acc_pred[i].argmax()+1:] + ' '\n",
         "\n",
         "    print (final)\n",
         "    return final"
       ],
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -344,20 +309,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "b0c11c67-efef-4f2d-f794-a69dff813bec"
+        "outputId": "2e4be429-8eed-4bb4-93f4-2dde8f42c16b"
       },
       "source": [
         "test = 'В России зимой бывает много снега.'\n",
         "test_acc = acc_in_sent(test)"
       ],
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "В' Ро'ссии зи'мой бы'вает мн'ого сн'ега. \n"
+            "В Ро'ссии зи'мой быва'ет мно'го сне'га. \n"
           ],
           "name": "stdout"
         }
@@ -384,7 +349,7 @@
         "with open('Accents_LSTM-/sentences.txt', 'r') as f:\n",
         "    sent_ = f.readlines()"
       ],
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -406,7 +371,7 @@
         "for i in range(10):\n",
         "    test_sent.append(sent_split[i])"
       ],
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -416,39 +381,40 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 381
+          "height": 353
         },
-        "outputId": "94d42a40-2797-4cf5-cddf-9360bc9dbe13"
+        "outputId": "64197397-f602-4f8e-b49c-cf2cab09736d"
       },
       "source": [
         "for k in range(len(test_sent)):\n",
         "    acc_in_sent(test_sent[k])\n",
+        "    #print(sent[k])\n",
         "    print()"
       ],
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Ст'арик вс'кочил с' ку'шетки. \n",
+            "Я' отказа'лась о'т косме'тики. \n",
             "\n",
-            "Он' сп'рыгнул на' по'л. \n",
+            "Комба'т прише'л в я'рость. \n",
             "\n",
-            "Я' бр'осилась в' ко'ридор. \n",
+            "Кана'дский го'нщик входи'л в мирову'ю эли'ту. \n",
             "\n",
-            "Мы' за'шли в' до'м. \n",
+            "Васи'лий поспеши'л на' го'лоса. \n",
             "\n",
-            "Гр'ег вы'глянул в' ок'но. \n",
+            "О'на вцепи'лась в сиде'нье. \n",
             "\n",
-            "Мы' по'скачем в' сн'егу. \n",
+            "Гло'рия задохну'лась о'т ужа'са. \n",
             "\n",
-            "Мы' вв'алились в' ка'кой-то по'дъезд. \n",
+            "Я' не' зна'ю о'б э'том собы'тии. \n",
             "\n",
-            "Он' пр'актически си'дел на' не'гре. \n",
+            "О'на отлете'ла к' дива'ну. \n",
             "\n",
-            "Я' по'смотрел на' уг'ольно-черную ко'шку. \n",
+            "Мы' наде'ялись на' благополу'чный исхо'д. \n",
             "\n",
-            "Я' вы'шла из' но'мера. \n",
+            "О'н тяже'ло перепры'гнул на' бо'рт. \n",
             "\n"
           ],
           "name": "stdout"
@@ -465,7 +431,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     }
   ]
